@@ -1,1 +1,3 @@
 --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
